<resources>
    <string name="app_name">急借通</string>
    <string name="rmb">¥</string>
    <string name="tab_home_text">借款</string>
    <string name="tab_mine_text">我的</string>
    <string name="tab_repayment_text">还款</string>

    <string name="tab_more_text">更多</string>
    <string name="login_phone">手机号</string>
    <string name="login_pwd">&#160;密&#160;&#160;码&#160;</string>
    <string name="register_name">姓名&#160;&#160;&#160;&#160;</string>
    <string name="register_idcard">身份证</string>
    <string name="register_veritfycode">验证码</string>
    <string name="login_veritfycode">验证码</string>
    <string name="register_invitationcode">邀请码</string>
    <string name="adavace">有邀请码额度会提升哦（可不填）</string>
    <string name="agreement_register">《用户使用及安全隐私协议》 </string>
    <string name="agreement_phone">《手机运营商信息授权认证》 </string>
    <string name="agreement_loan">《三方借款协议》 </string>
    <string name="agreement_privacy_line"><u> 《隐私保密协议》 </u></string>
    <string name="complete">完成</string>
    <string name="basic_infor">请告诉我们一些关于您的信息，我们将为您建立账号并申请借款</string>
    <!--完善信息提示-->
    <string name="confirmation_of_information">*请放心提供以上信息，我们绝不会泄露您的资料，仅为借款审核提供参考，您的信息是100%安全并经过技术加密保护的</string>
    <string name="confirmation_message">请确认以下信息是否为最新，如不是新信息，请尽快改正，否则会影响审核结果</string>

    <!--个人资料-->
    <string name="user_info_title">我们必须在审核之前核实您的身份</string>
    <string name="user_info_bank">请提供以下信息，我们才能准确无误放款至您的银行卡</string>
    <string name="user_info_card">我们需要以下信息来核实您的身份</string>


    <!--联系人-->
    <string name="contacts_ts">我们收集这些信息，接下来会联系您的亲属和朋友，以快速确认您的借款加速审核</string>
    <string name="contacts_add">请准确提供以下信息，我们需要这些信息来审核您的借款</string>
    <string name="bank_card">请绑定本人银行卡</string>
    <string name="bank_card_name">请填写持卡人</string>
    <!--认证信息-->
    <string name="credentials_ts">认证信息越多，放款越快，可借款额度会越高哦</string>

    <!--赚取奖金-->
    <string name="earn_abonus_method">赚取奖金方法:</string>
    <string name="earn_abonus_method_one">1.把自己的邀请码分享给好友，好友注册成功和接待成功，好友借贷的5%金额将作为奖励直接打进您的账户</string>
    <string name="earn_abonus_method_two">2.如果好友再次邀请另外一位好友注册成功且借贷成功那您还能获取2%的奖金，奖金直接存入您的账户</string>
    <string name="share_friend">马上分享给好友</string>
    <string name="methods_and_rules">使用方法及规则:</string>
    <string name="methods_and_rules_one">1.好友成功收到邀请码后，下载并打开XXX.app在注册界面填写邀请码即可</string>
    <string name="methods_and_rules_two">2.此活动期限2016.9.1到2016.12.31，非活动期限内邀请好友，暂不能获取奖金</string>

    <!--<string name="share_ad_url">http://m.jijietong.com:8680/h5-static/mobile/index.html</string>-->
    <!--下载app-->
    <string name="share_ad_url">http://192.168.6.107:9090/moblie_web/index.html</string>
    <!--测试注册  qq  wx-->
    <!--<string name="share_url"> http://192.168.6.107:9090/moblie_web_new/regist/online_regist/index.html</string>-->
    <!--生产-->
    <string name="share_url">http://m.jijietong.com:8680/h5-static/moblie_web_new/regist/online_regist/index.html</string>
    <!--短信-->
    <string name="dx_share_url">http://t.cn/RfScHvD</string>
    <string name="share_ad_title">一起赚钱吧!</string>
    <string name="share_ad_content">2016最强借贷神器，借款方便，还能赚钱。</string>

    <!--提额增信-->
    <string name="amount_credit">提供以下证明到门店审可以有效提升借款金额</string>

    <string name="code_desc">一张身份证，两分钟申请，30000元到账</string>

    <!--TakePhoto-->
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片...</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>

    <!--custom multipleimageselect -->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>

    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="home_remind_1">借款金额&#060;=5000元，可选周期5、10、15周</string>
    <string name="home_remind_2">借款金额>5000元，可选周期20、30、50周</string>
    <string name="bank">银行预留的手机号是办理该银行卡时所填写的手机号码。没有预留、手机号忘记或者已停用，请联系银行银行客服更新处理。大陆手机号为11位数字，非大陆手机号为“国家代码-手机号码”形式。</string>
    <string name="authenticate_hint">敬爱的顾客您好，您的资料已通过预审，请按"提交"后等待短信通知。</string>
    <string name="my_award_alter" formatted="false">*实际到账金额为奖金总额的95%，另外5%为第三方支付通道服务费，由“急借通”代扣</string>
    <string name="apply_alter">您在申请借款的过程中,急借通官方及工作人员不会通过电话、短信、邮件等任何方法，以担保费，咨询费等任何名义向您收取任何费用。请您务必知晓，谨防诈骗。</string>
    <string name="app_all_name">急借通</string>
    <string name="yq_alter">若无逾期，履约保证金将抵扣最后一期还款</string>
</resources>
