<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loan_bg"
    android:orientation="vertical">

    <com.two.emergencylending.view.Topbar
        android:id="@+id/credentials_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white"
        android:paddingLeft="10dp"
        custom:iv_left="@drawable/back"
        custom:leftBackground="@drawable/button_bg"
        custom:leftTextColor="@color/black"
        custom:leftTextSize="@dimen/title_left_size"
        custom:mytitle="手机运营商认证"
        custom:mytitleTextColor="@color/black"
        custom:mytitleTextSize="@dimen/title_size"
        custom:rightBackground="@drawable/button_bg"
        custom:rightTextColor="@color/black"
        custom:rightTextSize="@dimen/title_right_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/credentials_ts"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loan_bg"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="手机运营商授权认证"
                android:textColor="#4d4d4d"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/operator_jijietong" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/line_arrow" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_operation" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/app_all_name"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="手机认证"
                    android:textColor="#333333"
                    android:textSize="14sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/mobile_phone_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="60dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="请输入您的手机账号"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="15dp"
                android:text=""
                android:textColor="@color/title"
                android:textColorHint="#999999"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/register_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/mobile_phone_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="请输入您的手机运营商密码"
                    android:inputType="text"
                    android:maxLength="10"
                    android:paddingLeft="15dp"
                    android:password="true"
                    android:text=""
                    android:textColor="@color/title"
                    android:textColorHint="#999999"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="12dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/icon_question" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/register_line" />

            <LinearLayout
                android:id="@+id/ll_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/mobile_phone_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="请输入您的验证码"
                    android:maxLength="8"
                    android:paddingLeft="15dp"
                    android:text=""
                    android:textColor="@color/title"
                    android:textColorHint="#999999"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/register_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/loan_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <CheckBox
                        android:id="@+id/cb_check"
                        style="@style/MyCheckBox"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:checked="true"
                        android:padding="6dp" />

                    <TextView
                        android:id="@+id/tv_agreed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/cb_check"
                        android:text="我已阅读并同意"
                        android:textColor="#999999"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_agreement_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_agreed"
                        android:padding="5dp"
                        android:text="@string/agreement_register"
                        android:textColor="#5f91eb"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_agreement_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/tv_agreement_register"
                        android:text="@string/agreement_privacy_line"
                        android:textColor="#0092ff"
                        android:textSize="13sp"
                        android:visibility="gone" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_jd_confirm"
                    style="@style/button_orange"
                    android:layout_marginTop="30dp"
                    android:text="确认"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>